Ibrahim DEV/src/objects/attribution__c.object
<CustomObject>
    <fields>
        <fullName>candidatR__c</fullName>
        <label>relation candidat</label>
        <referenceTo>candidat__c</referenceTo>
        <relationshipLabel>attributions</relationshipLabel>
        <relationshipName>attributions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>codebarvetement__c</fullName>
        <label>codebarvetement</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nomCandidat__c</fullName>
        <label>nomCandidat</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vetementR__c</fullName>
        <label>relation vetement</label>
        <referenceTo>vetement__c</referenceTo>
        <relationshipLabel>attributions</relationshipLabel>
        <relationshipName>attributions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>attribution</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom de attribution</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>attributions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>